// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScript code generation #generateSource() should generate correct list with custom fragment 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

/**
 * The episodes in the Star Wars trilogy
 */
export enum Episode {
  /**
   * Star Wars Episode V: The Empire Strikes Back, released in 1980.
   */
  EMPIRE = \\"EMPIRE\\",
  /**
   * Star Wars Episode VI: Return of the Jedi, released in 1983.
   */
  JEDI = \\"JEDI\\",
  /**
   * Star Wars Episode IV: A New Hope, released in 1977.
   */
  NEWHOPE = \\"NEWHOPE\\",
}


export interface HeroAndFriendsNamesQueryVariables {
  episode?: Episode | null,
};

export interface HeroAndFriendsNamesQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    }
  ) | null,
};

export type FriendFragment = ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should generate fragmented query operations 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface HeroAndFriendsNamesQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    }
  ) | null,
};

export type heroFriendsFragment = ( {
      __typename: \\"Human\\",
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should generate mutation operations with complex input types 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

/**
 * The episodes in the Star Wars trilogy
 */
export enum Episode {
  /**
   * Star Wars Episode V: The Empire Strikes Back, released in 1980.
   */
  EMPIRE = \\"EMPIRE\\",
  /**
   * Star Wars Episode VI: Return of the Jedi, released in 1983.
   */
  JEDI = \\"JEDI\\",
  /**
   * Star Wars Episode IV: A New Hope, released in 1977.
   */
  NEWHOPE = \\"NEWHOPE\\",
}


export interface ReviewInput {
  /**
   * 0-5 stars
   */
  stars: number,
  /**
   * Comment about the movie, optional
   */
  commentary?: string | null,
  /**
   * Favorite color, optional
   */
  favorite_color?: ColorInput | null,
};

export interface ColorInput {
  red: number,
  green: number,
  blue: number,
};

export interface ReviewMovieMutationVariables {
  episode?: Episode | null,
  review?: ReviewInput | null,
};

export interface ReviewMovieMutation {
  createReview:  {
    __typename: \\"Review\\",
    /**
     * The number of stars this review gave, 1-5
     */
    stars: number,
    /**
     * Comment about the movie
     */
    commentary: string | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate query operations with inline fragments 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface HeroAndDetailsQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * What this human calls themselves
       */
      name: string,
      /**
       * Height in the preferred unit, default is meters
       */
      height: number | null,
    } | {
      __typename: \\"Droid\\",
      /**
       * What others call this droid
       */
      name: string,
      /**
       * This droid's primary function
       */
      primaryFunction: string | null,
    }
  ) | null,
};

export type HeroDetailsFragment = ( {
      __typename: \\"Human\\",
      /**
       * Height in the preferred unit, default is meters
       */
      height: number | null,
    } | {
      __typename: \\"Droid\\",
      /**
       * This droid's primary function
       */
      primaryFunction: string | null,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

/**
 * The episodes in the Star Wars trilogy
 */
export enum Episode {
  /**
   * Star Wars Episode V: The Empire Strikes Back, released in 1980.
   */
  EMPIRE = \\"EMPIRE\\",
  /**
   * Star Wars Episode VI: Return of the Jedi, released in 1983.
   */
  JEDI = \\"JEDI\\",
  /**
   * Star Wars Episode IV: A New Hope, released in 1977.
   */
  NEWHOPE = \\"NEWHOPE\\",
}


export interface HeroAndFriendsNamesQueryVariables {
  episode?: Episode | null,
};

export interface HeroAndFriendsNamesQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
      /**
       * The friends of the character, or an empty list if they have none
       */
      friends:  Array<( {
          __typename: \\"Human\\",
          /**
           * The name of the character
           */
          name: string,
        } | {
          __typename: \\"Droid\\",
          /**
           * The name of the character
           */
          name: string,
        }
      ) | null > | null,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate simple nested with required elements in lists 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface StarshipCoordsQuery {
  starship:  {
    __typename: \\"Starship\\",
    coordinates: Array< Array< number > > | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface HeroNameQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations including input variables 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

/**
 * The episodes in the Star Wars trilogy
 */
export enum Episode {
  /**
   * Star Wars Episode V: The Empire Strikes Back, released in 1980.
   */
  EMPIRE = \\"EMPIRE\\",
  /**
   * Star Wars Episode VI: Return of the Jedi, released in 1983.
   */
  JEDI = \\"JEDI\\",
  /**
   * Star Wars Episode IV: A New Hope, released in 1977.
   */
  NEWHOPE = \\"NEWHOPE\\",
}


export interface HeroNameQueryVariables {
  episode?: Episode | null,
};

export interface HeroNameQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle comments in enums 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export enum EnumCommentTestCase {
  /**
   * This is a single-line comment
   */
  first = \\"first\\",
  /**
   * This is a
   * multi-line
   * comment.
   */
  second = \\"second\\",
}


export interface CustomScalarQuery {
  commentTest:  {
    __typename: \\"CommentTest\\",
    enumCommentTest: EnumCommentTestCase | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle interfaces at root 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface CustomScalarQuery {
  interfaceTest: ( {
      __typename: \\"ImplA\\",
      prop: string,
      propA: string,
    } | {
      __typename: \\"ImplB\\",
      prop: string,
      propB: number | null,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle multi-line comments 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface CustomScalarQuery {
  commentTest:  {
    __typename: \\"CommentTest\\",
    /**
     * This is a
     * multi-line
     * comment.
     */
    multiLine: string | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle single line comments 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface CustomScalarQuery {
  commentTest:  {
    __typename: \\"CommentTest\\",
    /**
     * This is a single-line comment
     */
    singleLine: string | null,
  } | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should handle unions at root 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface CustomScalarQuery {
  unionTest: ( {
      __typename: \\"PartialA\\",
      prop: string,
    } | {
      __typename: \\"PartialB\\",
      prop: string,
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should have __typename value in nested property 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface HeroNameQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * The friends of the human exposed as a connection with edges
       */
      friendsConnection:  {
        __typename: \\"FriendsConnection\\",
        /**
         * The edges for each of the character's friends.
         */
        edges:  Array< {
          __typename: \\"FriendsEdge\\",
          /**
           * The character represented by this friendship edge
           */
          node: ( {
              __typename: \\"Human\\",
              /**
               * The name of the character
               */
              name: string,
            } | {
              __typename: \\"Droid\\",
              /**
               * The name of the character
               */
              name: string,
            }
          ) | null,
        } | null > | null,
      },
      /**
       * A list of starships this person has piloted, or an empty list if none
       */
      starships:  Array< {
        __typename: \\"Starship\\",
        /**
         * The name of the starship
         */
        name: string,
      } | null > | null,
    } | {
      __typename: \\"Droid\\",
      /**
       * The friends of the character exposed as a connection with edges
       */
      friendsConnection:  {
        __typename: \\"FriendsConnection\\",
        /**
         * The edges for each of the character's friends.
         */
        edges:  Array< {
          __typename: \\"FriendsEdge\\",
          /**
           * The character represented by this friendship edge
           */
          node: ( {
              __typename: \\"Human\\",
              /**
               * The name of the character
               */
              name: string,
            } | {
              __typename: \\"Droid\\",
              /**
               * The name of the character
               */
              name: string,
            }
          ) | null,
        } | null > | null,
      },
    }
  ) | null,
};
"
`;

exports[`TypeScript code generation #generateSource() should have __typename value matching fragment type on generic type 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface HeroNameQuery {
  hero: ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
    }
  ) | null,
};

export type HeroWithNameFragment = ( {
      __typename: \\"Human\\",
      /**
       * The name of the character
       */
      name: string,
    } | {
      __typename: \\"Droid\\",
      /**
       * The name of the character
       */
      name: string,
    }
  );
"
`;

exports[`TypeScript code generation #generateSource() should have __typename value matching fragment type on specific type 1`] = `
"/* tslint:disable */
//  This file was automatically generated and should not be edited.

export interface DroidNameQuery {
  droid:  {
    __typename: \\"Droid\\",
    /**
     * What others call this droid
     */
    name: string,
  } | null,
};

export interface DroidWithNameFragment {
  __typename: \\"Droid\\",
  /**
   * What others call this droid
   */
  name: string,
};
"
`;
